# taskloaf

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  README.md.tmpl  VERSION  mkdocs.yml  pytest.ini  rebuild  release  release.py  setup.py  testpypi
cmake/: TaskloafBase.cmake
dev/: deploy_docs  gen_readme.py  initial-build  install_travis_gcc  rebuild  run_tests  setup_travis  taskloaf_scripts.py  templating.py  testpypi  travis_cpp_test  travis_py_test
docs/: about.md  design.md  index.md  installation.md  python-quick-start.md
docs/docs_examples/: .gitignore  compile.py  first.cpp  fourth.cpp  second.cpp  third.cpp
examples/: _sparse.cpp  auto_unwrap.py  cholesky.cpp  client_server.py  cpp.py  diffusion.cpp  dot_product.cpp  embar.py  error_handling.cpp  fib.cpp  fib.hpp  fib_local.cpp  fibmpi.cpp  futures.py  gpu_client.py  gpu_server.py  inner.py  kernels.cl  local_run.py  local_task.py  lots_of_tasks.py  mapped_signals.py  mmap_bench.py  mpi_run.py  mpi_task.py  mpiexisting.py  mpitest.cpp  nested_task.py  new_client.py  new_server.py  new_simple.py  new_sparse.py  np.py  one_task.py  patterns.hpp  performance.py  promises.py  python_fib.py  readme.cpp  remote_await.py  (+10 more)
lib/: download
python/: compile  taskloaf.py  taskloaf_wrapper.cpp  test.py
src/: address.hpp  communicator.cpp  communicator.hpp  data.hpp  fnc.cpp  fnc.hpp  future.h  future.hpp  future_data.hpp  future_node.hpp  future_visitor.hpp  id.cpp  id.hpp  ivar.cpp  ivar.hpp  ivar_tracker.cpp  ivar_tracker.hpp  print_tree.hpp  run.cpp  run.hpp  task_collection.cpp  task_collection.hpp  taskloaf.hpp  worker.cpp  worker.hpp
src/taskloaf/: address.cpp  address.hpp  builders.hpp  caf_comm.cpp  caf_comm.hpp  caf_connect.hpp  closure.cpp  closure.hpp  closure.tcpp  comm.cpp  comm.hpp  communicator.cpp  communicator.hpp  data.cpp  data.hpp  debug.cpp  debug.hpp  default_task_collection.cpp  default_task_collection.hpp  default_worker.cpp  default_worker.hpp  execute.hpp  fnc.cpp  fnc.hpp  fnc_registry.cpp  fnc_registry.hpp  future.cpp  future.hpp  future_node.hpp  get_signature.hpp  global_ref.cpp  global_ref.hpp  gref_db.hpp  id.cpp  id.hpp  immutable_any.hpp  ivar.cpp  ivar.hpp  ivar_db.hpp  ivar_tracker.cpp  (+45 more)
taskloaf/: __init__.py  allocator.py  cfg.py  cluster.py  context.py  cppworker.cpp  csr.py  default_cfg.py  defaults.py  dref.py  executor.py  get.py  launch.py  local.py  local_comm.py  memory.py  message.capnp  messenger.py  mpi.py  mpi_comm.py  new_allocator.py  object_ref.py  profile.py  promise.py  protocol.py  readme.py  ref.py  refcounting.py  remote_get.py  run.py  serialize.py  shmem.py  signals.py  task.capnp  taskloaf_wrapper.cpp  test.py  test_decorators.py  test_refcounting.py  timer.py  worker.py  (+7 more)
tests/: benchmark.cpp  conftest.py  delete_tracker.hpp  fake_worker.hpp  fakes.py  fib.hpp  fixtures.py  ownership_tracker.hpp  playground.cpp  serializable_functor.hpp  serialize.cpp  serialize.hpp  test_allocator.py  test_client.py  test_closure.cpp  test_comm.cpp  test_comms.py  test_data.cpp  test_empty_futures.cpp  test_fakelaunch.cpp  test_fnc.cpp  test_free_launch.cpp  test_future.cpp  test_future2.cpp  test_future_ownership.cpp  test_gref.cpp  test_grow.py  test_iany.cpp  test_id.cpp  test_inplacepickle.py  test_ivar.cpp  test_launch.cpp  test_memory.py  test_mpi.cpp  test_mpi_main.cpp  test_print.cpp  test_promise.py  test_promotion.cpp  test_protocol.py  test_python.py  (+19 more)
